# statseed

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml
backend/: main.py
backend/routers/: descriptive.py  graph.py  guide.py  regression.py  table1.py  test.py  upload.py
backend/schemas/: common.py  descriptive.py  graph.py  guide.py  regression.py  table1.py  test.py  upload.py
backend/services/: guide.py  upload.py
backend/tests/: test_cors.py  test_descriptive.py  test_graph.py  test_graph_edit_overrides.py  test_graph_export_endpoint.py  test_guide.py  test_hypothesis.py  test_kaplan_meier.py  test_logistic_regression.py  test_mixed_regression.py  test_regression.py  test_repeated_anova.py  test_roc.py  test_table1.py  test_upload.py
docs/: PRODUCT_AUDIT.md
docs/manual/: 00-getting-started.md  01-welch.md  02-paired-t.md  03-mannwhitney.md  04-wilcoxon.md  05-chisquare.md  06-fisher.md  07-pearson.md  09-anova.md  (+5 more)
frontend/: next.config.mjs  package-lock.json  package.json  playwright.config.ts
sample-data/: 01_rehab_pre_post.csv  02_pain_3groups.csv  03_outcome_categorical.csv  04_grip_walk_correlation.csv  05_survival_followup.csv  06_roc_diagnostic.csv  07_histogram_large_normal.csv  08_histogram_bimodal_walk.csv  09_treatment_3groups_large.csv  10_rehab_pre_post_large.csv  11_correlation_large.csv  12_categorical_outcomes_large.csv  README.md
scripts/: capture-full-manual.ts  capture-legend-fix.ts  generate-manual.ts  mobile-check.ts
verify/: compare.py  data_gen.py  r_calc.R  run_all.sh  statseed_calc.py
(+64 files in other folders)
