[project]
name = "statseed"
version = "0.1.0"
description = "コメディカル向け医療統計Webアプリ"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
analysis = [
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "pandas>=2.2.0",
    "statsmodels>=0.14.0",
    "openpyxl>=3.1.0",
]
graph = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
